tests/cases/compiler-development/artifact/errors/diagnostic-match-or-pattern-binding-type.diagnostic
diagnostic error code=T0001 family=type message="or-pattern binding 'value' has inconsistent types: i32 and u32" sources=1 labels=1 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/match/errors/match-or-pattern-binding-type.ari" display="tests/cases/match/errors/match-or-pattern-binding-type.ari" bytes=141
  Label index=0 role=primary source_id=0 source="tests/cases/match/errors/match-or-pattern-binding-type.ari" line=8 column=5 end_line=8 end_column=10 byte_start=91 byte_end=96 message=""
  Snippet label=0 text="  --> tests/cases/match/errors/match-or-pattern-binding-type.ari:8:5\n   |\n 8 |     Small(value) | Big(value) => value as i64,\n   |     ^^^^^"
  Note index=0 location=none message="all alternatives in an or-pattern must give a shared binding one concrete type"
  Help index=0 location=none message="use different binding names, convert the payloads to a common type, or split the alternatives into separate arms"
